crates/ssa-workflow-derive/tests/ui/enum_discriminant.stderr
error: CanonicalEncode unit enum discriminants are not supported; variants encode by declaration order
 --> tests/ui/enum_discriminant.rs:6:9
  |
6 |     A = 1,
  |         ^
